<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textAppearance="@style/Gofa.TextLg.Bold"/>
    <TextView
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_save_this_address_as_office"
        android:textAppearance="@style/Gofa.TextSm"/>
    <LinearLayout
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Gofa.TextButton"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel_delete"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cornerRadius="100dp"
            style="@style/Gofa.Button"
            android:text="@string/save"/>

    </LinearLayout>
</LinearLayout>
