<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    app:cardBackgroundColor="@color/surface"
    app:cardCornerRadius="24dp"
    app:cardElevation="8dp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/confirm_save"
            android:textAppearance="@style/Gofa.TextLg.Bold"
            android:textColor="@color/onSurface" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:text="@string/msg_confirm_save_place"
            android:textAppearance="@style/Gofa.TextBase"
            android:textColor="@color/onSurfaceVariant" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                style="@style/Gofa.Button.Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="#009688"
                app:rippleColor="#F0FDFC" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirm"
                style="@style/Gofa.Button.Primary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:backgroundTint="@color/success"
                android:text="@string/save"
                app:cornerRadius="24dp" />

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
