<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_name"
        android:textAppearance="@style/Gofa.TextLg.Bold"/>
    <EditText
        android:id="@+id/edtCustomNameLocation"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edt_location_name"/>
    <LinearLayout
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Gofa.TextButton"
            android:text="@string/cancel_delete"/>
        <View
            android:layout_width="8dp"
            android:layout_height="0dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:cornerRadius="100dp"
            style="@style/Gofa.TextButton.Primary"/>

    </LinearLayout>

</LinearLayout>
